--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,31 @@
 asgiref==3.4.1
 certifi==2021.10.8
 charset-normalizer==2.0.9
+defusedxml==0.7.1
+diff-match-patch==20200713
 dj-database-url==0.5.0
 Django==3.2.9
 django-crispy-forms==1.13.0
 django-environ==0.8.1
 django-filter==21.1
+django-import-export==2.7.1
 django-on-heroku==1.1.2
 django-widget-tweaks==1.4.9
+et-xmlfile==1.1.0
 idna==3.3
+MarkupPy==1.14
+odfpy==1.4.1
+openpyxl==3.0.9
 Pillow==8.4.0
 psycopg2-binary==2.9.3
 python-dateutil==2.8.2
 pytz==2021.3
+PyYAML==6.0
 requests==2.26.0
 six==1.16.0
 sqlparse==0.4.2
+tablib==3.2.0
 urllib3==1.26.7
 whitenoise==6.0.0
+xlrd==2.0.1
+xlwt==1.3.0
